# Part of the LLVM Project, under the Apache License v2.0 with LLVM Exceptions.
# See https://llvm.org/LICENSE.txt for license information.
# SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception
# Copyright (c) 2024.

[build-system]
requires = [
    "scikit-build-core==0.10.7",
    "nanobind==2.4.0",
    "typing_extensions==4.12.2",
    "numpy==2.0.2"
]
build-backend = "scikit_build_core.build"

[project]
name = "eudsl-py"
version = "0.0.1"
requires-python = ">=3.9"
dependencies = [
    "numpy==2.0.2"
]

[project.urls]
Homepage = "https://github.com/llvm/eudsl"

[tool.scikit-build]
minimum-version = "0.4"
build-dir = "build/{wheel_tag}"
wheel.py-api = "cp312"
cmake.source-dir = "."

[tool.scikit-build.cmake.define]
LLVM_DIR = {env="LLVM_DIR", default="EMPTY"}
MLIR_DIR = {env="MLIR_DIR", default="EMPTY"}
Clang_DIR = {env="Clang_DIR", default="EMPTY"}
CMAKE_PREFIX_PATH = {env="CMAKE_PREFIX_PATH", default="EMPTY"}
CMAKE_CXX_VISIBILITY_PRESET = "hidden"
CMAKE_VERBOSE_MAKEFILE = "ON"

[tool.cibuildwheel]
build-verbosity = 1
skip = ["*-manylinux_i686", "*-musllinux*", "pp*", "*-win32"]
archs = ["auto64"]
manylinux-x86_64-image = "manylinux_2_28"
environment-pass = [
    "LLVM_DIR",
    "MLIR_DIR",
    "Clang_DIR",
    "CMAKE_GENERATOR",
    "CMAKE_PREFIX_PATH",
    "DISABLE_COMPILE_OPT",
    "CC",
    "CXX"
]

[tool.cibuildwheel.linux]
before-build = [
    "yum install -y clang",
]
