# Part of the LLVM Project, under the Apache License v2.0 with LLVM Exceptions.
# See https://llvm.org/LICENSE.txt for license information.
# SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception

[build-system]
# https://stackoverflow.com/a/69711730
requires = ["setuptools>=64.0.0", "wheel", "pip"]
build-backend = "backend"
backend-path = ["_custom_build"]

[tool.pytest.ini_options]
log_cli = false
log_cli_level = "DEBUG"
log_cli_format = "[%(filename)s:%(funcName)s:%(lineno)d] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
